--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "compile:sass": "sass ./src/assets/sass/base.scss ./src/assets/css/main.css --watch"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.12",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "sass": "^1.85.1"
+    "sass": "^1.85.1",
+    "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
